# test-task-backend

./: .gitignore  README.md  alembic.ini  constants.py  package.json  pyproject.toml  unset.sh
DevMigrations/: env.py
beek/: config.py  db.py  decorators.py  main.py
beek/models/: users_models.py
beek/routers/: forms.py  users.py
riche_questionnaire_back_end/: db.py  decorators.py  halpers.py  main.py
riche_questionnaire_back_end/models/: users_models.py
riche_questionnaire_back_end/routers/: forms.py  users.py
testDb/: Dockerfile  docker-compose.yml
testDb/postgres_data/: postmaster.opts  postmaster.pid
testDb/postgres_data/base/1/: pg_internal.init
testDb/postgres_data/base/16384/: 1247  1249  1259  1259_vm  13396  13396_fsm  13396_vm  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16389  16392  16394  16400  16401  16403  16410  16411  2224  2579  2604  2606  2608  2608_fsm  2609  2609_fsm  2610  2610_fsm  2615  2615_fsm  2615_vm  (+31 more)
testDb/postgres_data/base/5/: pg_internal.init
testDb/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
