[tool.poetry]
name = "riche_questionnaire_back_end"
version = "0.1.0"
description = ""
authors = ["Ilya Barinov <ilya.bv.2002@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
passlib = "^1.7.4"
alembic = "^1.13.1"
jwt = "^1.3.1"
psycopg2-binary = "^2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
